fix layout bug when forum signature is present in a fixed width site with rightblocks

--- a/public_html/layout/nouveau/style.css
+++ b/public_html/layout/nouveau/style.css
@@ -2634,7 +2634,7 @@ width:16px;
 }
 .signature {
   overflow:hidden;
-  width: 500px;
+  width: 100%;
   max-height: 150px;
 }
 
